<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Happy Birthday</string>
    <string name="title2">Pleasa enter your birthday wish</string>
    <string name="Temprature">Please enter Temprature </string>
    <string name="F2C">F2C</string>
    <string name="C2F">C2F</string>
    <string name="Temprature_show">Temprature show</string>
    <string name="Centigradedegree">Centigradedegree is </string>
    <string name="Fahrenheitdegree">Fahrenheitdegree is </string>
    <string name="Reset">Reset</string>
    <string name="input_RMB">input RMB</string>
    <string name="Dollar">Dollar</string>
    <string name="EURO">EURO</string>
    <string name="WON">WON</string>
    <string name="rata_config">config</string>
    <string name="sava">Sava</string>
    <string name="currency">currency</string>
</resources>